--- a/apps/web-antd/src/locales/langs/zh-CN/page.json
+++ b/apps/web-antd/src/locales/langs/zh-CN/page.json
@@ -16,6 +16,8 @@
     "add": "新增",
     "edit": "编辑",
     "delete": "删除",
+    "publish": "发布",
+    "unpublish": "取消发布",
     "save": "保存",
     "import": "导入",
     "export": "导出",
